Update HTML title and meta tags for Petals Digital1

--- a/index.html
+++ b/index.html
@@ -15,17 +15,12 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Draft | 2025-11-24 11:51:48</title>
-
-    <meta property="name" content="Draft | 2025-11-24 11:51:48">
-    <meta property="og:title" content="Draft | 2025-11-24 11:51:48">
-    <meta property="og:site_name" content="Draft | 2025-11-24 11:51:48">
-    <meta property="og:type" content="website">
-    <meta property="url" content="https://draft-478386.send-pulse.com">
-    <meta property="og:url" content="https://draft-478386.send-pulse.com">
-    <meta property="image" content="https://userimages-sendpulse.s3.eu-central-1.amazonaws.com/sites/f31b00c8d27866b8e0320f55b889c3a6/d3a458a79309e46167c375ed8393b7f1/thumbnail.webp">
-    <meta property="og:image" content="https://userimages-sendpulse.s3.eu-central-1.amazonaws.com/sites/f31b00c8d27866b8e0320f55b889c3a6/d3a458a79309e46167c375ed8393b7f1/thumbnail.webp">
-
+    <title>Petals Digital | Пелюстки себе</title>
+<meta property="name"        content="Petals Digital | Пелюстки себе">
+<meta property="og:title"    content="Petals Digital | Пелюстки себе">
+<meta property="og:site_name" content="Petals Digital">
+<meta property="og:image"    content="petals-logo.png">
+<link rel="icon" type="image/png" href="petals-logo.png">
     <link rel="canonical" href="https://draft-478386.send-pulse.com">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
