Fix form tag syntax in index.html

--- a/index.html
+++ b/index.html
@@ -4733,7 +4733,8 @@
   method="POST"
   target="hidden_iframe"
   onsubmit="handleSubmit();"
-  id="contactForm"
+ <form id="contactForm" action="https://docs.google.com/forms/d/e/1FAIpQLSfLw09C_B9WZGI_aaDandTGGsbTkZriYbdgPtMC2zUf4boikA/formResponse" method="POST" target="hidden_iframe" onsubmit="handleSubmit();">
+
 >
 
   <label>Імʼя</label>
