Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4728,26 +4728,47 @@
 <h2 style="text-align: center;">Контакт</h2></div></div><!----><!----><!----><!----></web-builder-text><!----></div></web-builder-widget-resolver><!----><!----></div><div _ngcontent-webbuilderapp-c1389753611><web-builder-widget-resolver _ngcontent-webbuilderapp-c1389753611 ngh="23"><div style="position: relative; top: 0px; left: 0px;" id="widget-c43eb601-95e8-495a-b04b-5c2f548c4d5b"><web-builder-chat-bot _nghost-webbuilderapp-c2902313802 ngh="22"><div _ngcontent-webbuilderapp-c2902313802 class="sp-chat-bot-group mobile-column-direction widget-specific-nav-align c012786325"><a _ngcontent-webbuilderapp-c2902313802 class="sp-chat-bot-item c012786326" target="_blank" href="https://wa.me/qr/VUG2GVVSTMFMB1"><img _ngcontent-webbuilderapp-c2902313802 src="/sp-auth/websites/builder/assets/img/websites/social-icons/logos/whatsapp-logos.svg" alt="whatsapp"><!----><!----><!----></a><!----><a _ngcontent-webbuilderapp-c2902313802 class="sp-chat-bot-item c012786326" target="_blank" href="https://tg.pulse.is/Petalsdigital_bot"><img _ngcontent-webbuilderapp-c2902313802 src="/sp-auth/websites/builder/assets/img/websites/social-icons/logos/telegram-logos.svg" alt="telegram"><!----><!----><!----></a><!----><!----></div></web-builder-chat-bot><!----></div></web-builder-widget-resolver><!----><!----></div><!----><!----></div></div></div></div><!----><!----><!----><!----></web-builder-column-wrapper></div><!----></div></div><!----></div></div></div></web-builder-block-wrapper><!----><!----><!----><!----></div><div _ngcontent-webbuilderapp-c1389753611 class id="60476fe3"><web-builder-block-wrapper _ngcontent-webbuilderapp-c1389753611 _nghost-webbuilderapp-c1898196100 ngh="2"><div _ngcontent-webbuilderapp-c1898196100 class="block-container" style="position: relative;"><!----><!----><div _ngcontent-webbuilderapp-c1898196100 class="block sp-block c012786145 not-pined-on-top-block not-pined-on-bottom-block" id="block-60476fe3-0d80-4634-8ae1-8803e351edea"><web-builder-block-shape-dividers _ngcontent-webbuilderapp-c1898196100 _nghost-webbuilderapp-c1576437421 ngh="1"><!----><!----><!----><!----></web-builder-block-shape-dividers><div _ngcontent-webbuilderapp-c1898196100 class="c012786143"><!----><!----></div><!----><!----><div _ngcontent-webbuilderapp-c1898196100 class="c012786146"><div _ngcontent-webbuilderapp-c1389753611><div _ngcontent-webbuilderapp-c1389753611 class="section-container"><div _ngcontent-webbuilderapp-c1389753611 class="column-container lpc-col-12 lpc-col-equal-1" style="margin-top: 0px; margin-bottom: 0px;"><web-builder-column-wrapper _ngcontent-webbuilderapp-c1389753611 _nghost-webbuilderapp-c1575415407 ngh="3"><div _ngcontent-webbuilderapp-c1575415407 class="sp-column c012786147" id="column-79e191f1-6c88-48a7-b13d-198af49e8991"><div _ngcontent-webbuilderapp-c1575415407 class="c012786151"><div _ngcontent-webbuilderapp-c1575415407 class="c012786148"></div><div _ngcontent-webbuilderapp-c1575415407 class="c012786149"><div _ngcontent-webbuilderapp-c1575415407 class="c012786150"><div _ngcontent-webbuilderapp-c1389753611><web-builder-widget-resolver _ngcontent-webbuilderapp-c1389753611 ngh="8"><div style="position: relative; top: 0px; left: 0px; width: 100%;" id="widget-48c7f1f7-b2a6-4abf-a90b-ecb6d16bc2f4"><web-builder-text _nghost-webbuilderapp-c1423219384 ngh="7"><div _ngcontent-webbuilderapp-c1423219384 class="sp-ui-text sp-text-root c012786327"><div _ngcontent-webbuilderapp-c1423219384 class="c012786328"><h2 class style="text-align: center;">Залиш свої контакти та зручний спосіб зв’язку — обов’язково відповім.</h2></div></div><!----><!----><!----><!----></web-builder-text><!----></div></web-builder-widget-resolver><!----><!----></div><!----><!----></div></div></div></div><!----><!----><!----><!----></web-builder-column-wrapper></div><!----></div></div><div _ngcontent-webbuilderapp-c1389753611><div _ngcontent-webbuilderapp-c1389753611 class="section-container"><div _ngcontent-webbuilderapp-c1389753611 class="column-container lpc-col-12 lpc-col-equal-1" style="margin-top: 0px; margin-bottom: 0px;"><web-builder-column-wrapper _ngcontent-webbuilderapp-c1389753611 _nghost-webbuilderapp-c1575415407 ngh="3"><div _ngcontent-webbuilderapp-c1575415407 class="sp-column c012786152" id="column-d00cb59f-9af6-4dac-9596-f7d7c8c7879c"><div _ngcontent-webbuilderapp-c1575415407 class="c012786156"><div _ngcontent-webbuilderapp-c1575415407 class="c012786153"></div><div _ngcontent-webbuilderapp-c1575415407 class="c012786154"><div _ngcontent-webbuilderapp-c1575415407 class="c012786155"><div _ngcontent-webbuilderapp-c1389753611><web-builder-widget-resolver _ngcontent-webbuilderapp-c1389753611 ngh="25"><div style="position: relative; top: 0px; left: 0px;" id="widget-97dce5a0-9c83-4f3b-b777-d9ca643bce19"><web-builder-form _nghost-webbuilderapp-c384828646 ngh="24"><div _ngcontent-webbuilderapp-c384828646 class="c012786329 c012786330"><form _ngcontent-webbuilderapp-c384828646 novalidate class="sp-lpc-form sp-form-root ng-untouched ng-pristine ng-invalid"><div _ngcontent-webbuilderapp-c384828646 formarrayname="formArray" class="c012786331 ng-untouched ng-pristine ng-invalid"><div _ngcontent-webbuilderapp-c384828646 class="field-block sp-form-control c012786332 ng-untouched ng-pristine ng-valid"><label _ngcontent-webbuilderapp-c384828646 class> Ім'я </label><!----><input _ngcontent-webbuilderapp-c384828646 class="sp-form-input c012786333 ng-untouched ng-pristine ng-valid" id="97dce5a0-9c83-4f3b-b777-d9ca643bce19" type="text" placeholder="Повне ім'я" value><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></div><div _ngcontent-webbuilderapp-c384828646 class="field-block sp-form-control c012786332 ng-untouched ng-pristine ng-invalid"><label _ngcontent-webbuilderapp-c384828646 class> Телефон * </label><!----><input _ngcontent-webbuilderapp-c384828646 class="sp-form-input c012786333 is-invalid ng-untouched ng-pristine ng-invalid" id="97dce5a0-9c83-4f3b-b777-d9ca643bce19-variable-phone" type="tel" placeholder="1234567890" value><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></div><div _ngcontent-webbuilderapp-c384828646 class="field-block sp-form-control c012786332 ng-untouched ng-pristine ng-invalid"><label _ngcontent-webbuilderapp-c384828646 class> Email * </label><!----><input _ngcontent-webbuilderapp-c384828646 class="sp-form-input c012786333 is-invalid ng-untouched ng-pristine ng-invalid" id="97dce5a0-9c83-4f3b-b777-d9ca643bce19-variable-email" type="email" placeholder="username@gmail.com" value><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></div><!----><div _ngcontent-webbuilderapp-c384828646 class="c012786336"><a _ngcontent-webbuilderapp-c384828646 class="submit-btn sp-form-submit c012786337 sp-ui-button sp-ui-button-md sp-ui-button-primary-light" id="97dce5a0-9c83-4f3b-b777-d9ca643bce19-submit"><!----> 
     
     Зв'язатися </a></div><!----><!----></div></form></div></web-builder-form>
-    <form 
-  action="https://docs.google.com/forms/d/e/1FAIpQLSfLw09C_B9WZGI_aaDandTGGsbTkZriYbdgPtMC2zUf4boikA/formResponse"
-  method="POST"
-  target="hidden_iframe"
-  onsubmit="handleSubmit();"
- <form id="contactForm" action="https://docs.google.com/forms/d/e/1FAIpQLSfLw09C_B9WZGI_aaDandTGGsbTkZriYbdgPtMC2zUf4boikA/formResponse" method="POST" target="hidden_iframe" onsubmit="handleSubmit();">
-
->
+    <form id="contactForm"
+      action="https://docs.google.com/forms/d/e/1FAIpQLSfLw09C_B9WZGI_aaDandTGGsbTkZriYbdgPtMC2zUf4boikA/formResponse"
+      method="POST"
+      target="hidden_iframe"
+      onsubmit="handleSubmit();">
 
   <label>Імʼя</label>
-  <input type="text" name="entry.1539570169" placeholder="Повне імʼя" required>
+  <input type="text"
+         name="entry.1539570169"
+         placeholder="Повне імʼя"
+         required>
 
   <label>Телефон</label>
-  <input type="text" name="entry.182223494" placeholder="+380..." required>
+  <input type="text"
+         name="entry.182223494"
+         placeholder="+380…"
+         inputmode="tel"
+         required>
 
   <label>Email</label>
-  <input type="email" name="entry.1802624254" placeholder="email@example.com" required>
+  <input type="email"
+         name="entry.1802624254"
+         placeholder="email@example.com"
+         required>
 
   <button type="submit">Звʼязатися</button>
 </form>
+
+<iframe name="hidden_iframe" style="display:none;"></iframe>
+
+<div id="thankYouMessage" style="display:none; margin-top:20px;">
+  <p>Дякую! Заявка надіслана 💛</p>
+</div>
+
+<script>
+function handleSubmit() {
+  document.getElementById('contactForm').style.display = 'none';
+  document.getElementById('thankYouMessage').style.display = 'block';
+}
+</script>
+
 
 <iframe name="hidden_iframe" style="display:none;"></iframe>
 
