--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- FAVICON -->
-<link rel="icon" type="image/png" href="petals-logo.png">
+<link rel="icon" href="petals-logo.png" type="image/png">
 
 <!-- OPEN GRAPH / SOCIAL -->
 <meta property="og:title" content="Petals — Пелюстки себе">
