--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
 <!DOCTYPE html>
 <html lang="uk-UA">
 <head>
-    <!-- BASIC -->
 <meta charset="UTF-8">
-<title>Petals — Пелюстки себе</title>
-<meta name="description" content="Пелюстки себе — мʼякі практики самопізнання, емоційної рефлексії та арт-терапії.">
-<meta name="keywords" content="психологія, самопізнання, арт-терапія, емоції, рефлексія">
+
+<!-- Основні мета -->
+<title>Пелюстки себе — емоційне самопізнання</title>
+<meta name="description" content="Пелюстки себе — книга та арт-практики для мʼякого самопізнання і роботи з емоціями через метафори, історії та внутрішній діалог.">
+<meta name="keywords" content="самопізнання, емоції, арт терапія, казкотерапія, психологія, пелюстки себе">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<!-- FAVICON -->
-<link rel="icon" href="petals-logo.png" type="image/png">
-
-<!-- OPEN GRAPH / SOCIAL -->
-<meta property="og:title" content="Petals — Пелюстки себе">
-<meta property="og:description" content="Мʼякі практики самопізнання та емоційної рефлексії.">
+<!-- Open Graph / соцмережі -->
+<meta property="og:title" content="Пелюстки себе">
+<meta property="og:description" content="Книга та арт-практики для емоційного самопізнання без тиску, діагнозів і поспіху.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://petals.digital/">
+<meta property="og:url" content="https://petals.digital">
 <meta property="og:image" content="https://petals.digital/petals-logo.png">
-<meta property="og:site_name" content="Petals">
 
+<!-- Canonical -->
+<link rel="canonical" href="https://petals.digital">
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="petals-logo.png">
+<link rel="icon" type="image/png" sizes="16x16" href="petals-logo.png">
+<link rel="apple-touch-icon" href="petals-logo.png">
 
     
     
