--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <!-- Favicon -->
 <link rel="icon" type="image/png" sizes="32x32" href="petals-logo.png">
 <link rel="icon" type="image/png" sizes="16x16" href="petals-logo.png">
-<link rel="apple-touch-icon" href="petals-logo.png">
+<link rel="icon" type="image/png" href="petals-logo.png?v=2">
+<link rel="apple-touch-icon" href="petals-logo.png?v=2">
 
     
     
