--- a/index.html
+++ b/index.html
@@ -4151,19 +4151,17 @@
 <p class="leading" style="text-align: center;"><span style="font-size: 18px;">&nbsp;Напиши напряму в улюблений месенджер.</span></p>
 <div class="contact-social footer-social">
 
-  <a href="https://wa.me/380XXXXXXXXX" target="_blank" aria-label="WhatsApp">
-    <img src="whatsup.png" alt="WhatsApp">
+  <div class="footer-social">
+  <a href="https://wa.me/380634311663" target="_blank" aria-label="WhatsApp">
+    <img src="whatsapp.png" alt="WhatsApp">
   </a>
 
-  <a href="https://t.me/USERNAME" target="_blank" aria-label="Telegram">
+  <a href="https://t.me/Petalsdigital_bot" target="_blank" aria-label="Telegram">
     <img src="telegram.png" alt="Telegram">
   </a>
 
-  <a href="https://www.tiktok.com/@USERNAME" target="_blank" aria-label="TikTok">
+  <a href="https://www.tiktok.com/@artaiterapyst" target="_blank" aria-label="TikTok">
     <img src="tiktok.png" alt="TikTok">
   </a>
 </div>
 
-    
-
-</html>
