Update1 index.html

--- a/en/index.html
+++ b/en/index.html
@@ -1,21 +1,45 @@
+
 <!-- HERO SECTION -->
-<section style="padding: 80px 20px; text-align: center;">
-    <h1 style="font-size: 42px; font-weight: 600; margin-bottom: 20px;">
-        Emotional Self-Discovery Through Metaphor
+<section style="width:100%; padding:120px 20px; background:#faf9f8;">
+  <div style="max-width:840px; margin:0 auto; text-align:center;">
+
+    <h1 style="
+      font-family: 'Georgia', serif;
+      font-size: 42px;
+      font-weight: 500;
+      color:#2e2e2e;
+      line-height:1.3;
+      margin-bottom:25px;
+    ">
+      Emotional Self-Discovery Through Metaphor
     </h1>
 
-    <p style="font-size: 20px; max-width: 700px; margin: 0 auto; line-height: 1.6; opacity: 0.9;">
-        Gentle stories, symbolic imagery, and quiet reflections that help you hear yourself again.
-        <br>
-        A soft space for emotional clarity, created through art-based therapeutic tools.
+    <p style="
+      font-family: 'Inter', sans-serif;
+      font-size: 19px;
+      color:#4a4a4a;
+      line-height:1.6;
+      max-width:620px;
+      margin:0 auto 40px;
+    ">
+      Gentle stories, symbolic imagery, and reflective tools that help you reconnect  
+      with your inner world.  
+      A soft, quiet space for emotional clarity.
     </p>
 
-    <div style="margin-top: 40px;">
-        <a href="#" 
-           style="display: inline-block; padding: 14px 32px; 
-                  background-color: #5e4a6e; color: white; text-decoration: none; 
-                  border-radius: 8px; font-size: 18px;">
-            Explore the Petals Method
-        </a>
-    </div>
+    <a href="#method" style="
+      display:inline-block;
+      padding:14px 32px;
+      background:#5e4a6e;
+      color:white;
+      font-family:'Inter', sans-serif;
+      font-size:17px;
+      border-radius:6px;
+      text-decoration:none;
+      transition:0.2s ease;
+    " onmouseover="this.style.opacity='0.85'" onmouseout="this.style.opacity='1'">
+      Explore the Petals Method
+    </a>
+
+  </div>
 </section>
