Update2 index.html

--- a/en/index.html
+++ b/en/index.html
@@ -43,3 +43,158 @@
 
   </div>
 </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Petals — Emotional Self-Discovery Through Metaphor</title>
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Georgia', serif;
+        background: #fdf9f7;
+        color: #2a2a2a;
+        line-height: 1.6;
+    }
+
+    .container {
+        width: 90%;
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 40px 0;
+        text-align: center;
+    }
+
+    h1, h2, h3 {
+        font-weight: 600;
+    }
+
+    h1 {
+        font-size: 42px;
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        font-size: 32px;
+        margin-top: 80px;
+        margin-bottom: 20px;
+    }
+
+    p {
+        font-size: 20px;
+        opacity: 0.9;
+    }
+
+    .btn-primary {
+        background: #5e4a6e;
+        color: white;
+        padding: 14px 28px;
+        border-radius: 8px;
+        font-size: 18px;
+        text-decoration: none;
+        margin: 10px;
+        display: inline-block;
+    }
+
+    .btn-secondary {
+        border: 2px solid #5e4a6e;
+        color: #5e4a6e;
+        padding: 14px 28px;
+        border-radius: 8px;
+        font-size: 18px;
+        text-decoration: none;
+        margin: 10px;
+        display: inline-block;
+    }
+
+    .image-block {
+        width: 100%;
+        max-width: 700px;
+        margin: 40px auto;
+        border-radius: 14px;
+        overflow: hidden;
+    }
+
+    .image-block img {
+        width: 100%;
+        display: block;
+    }
+
+    .section {
+        padding: 60px 0;
+    }
+</style>
+</head>
+
+<body>
+
+<!-- HERO SECTION -->
+<section class="container">
+    <h1>Emotional Self-Discovery Through Metaphor</h1>
+
+    <p>Gentle stories, symbolic imagery, and quiet reflections that help you hear yourself again.  
+    A soft space for emotional clarity, created through art-based therapeutic tools.</p>
+
+    <a href="#" class="btn-primary">Start Free Guide</a>
+    <a href="#" class="btn-secondary">Explore the Petals Method</a>
+
+    <div class="image-block">
+        <img src="/images/hero-bg.jpg" alt="Petals background image">
+    </div>
+</section>
+
+
+<!-- ABOUT ME -->
+<section class="container section">
+    <h2>About Me</h2>
+    <p>I work at the intersection of emotional clarity, storytelling therapy, and visual metaphor.</p>
+    <p>My method was born from one simple truth: people understand themselves not through pressure, but through gentle reflection.</p>
+    <p>I help individuals navigate emotional overload, anxiety, transitions, and the quiet seasons of life when nothing feels clear anymore.</p>
+
+    <div class="image-block">
+        <img src="/images/book.png" alt="Petals book image">
+    </div>
+
+    <a href="#" class="btn-secondary">Work With Me</a>
+</section>
+
+
+<!-- SERVICES -->
+<section class="container section">
+    <h2>Services</h2>
+
+    <h3>🌿 Emotional Reset Session (1:1)</h3>
+    <p>A gentle conversation designed to bring clarity, grounding, and relief.  
+    We explore your emotional state through metaphor, insight, and guided reflection.</p>
+
+    <p><strong>You receive:</strong><br>
+    • emotional decoding of your current state<br>
+    • tailor-made metaphor or story<br>
+    • grounding practices for the next 7 days<br>
+    • a micro-reset ritual<br>
+    • a follow-up note to help you integrate</p>
+
+    <a href="#" class="btn-primary">Book Session</a>
+
+    <h3>📘 30-Day Deep Reset Book</h3>
+    <p>A complete emotional restoration journey with 30 emotional “petals”,  
+    daily reflections, micro-practices, and a structured path toward clarity.</p>
+
+    <a href="#" class="btn-primary">Get the 30-Day Book</a>
+
+    <h3>🌸 Personalized Petal (Story)</h3>
+    <p>A tailor-made emotional metaphor crafted uniquely for your current state.  
+    Like therapy — but gentler, symbolic, and deeply intuitive.</p>
+
+    <a href="#" class="btn-primary">Order Personalized Petal</a>
+</section>
+
+
+<!-- THE PETALS METHOD -->
+<section class="container section">
+    <h2>The Petals Method™</h2>
+    <p>A modern emotional support approach combining:</p>
+    <p>
