Add service and seller information section to buy.html

--- a/buy.html
+++ b/buy.html
@@ -198,6 +198,44 @@
         </div>
       </div>
     </div>
+<section class="section" style="margin-top:40px; background:rgba(255,255,255,0.85); border-radius:18px; padding:28px; font-size:14px; color:#444;">
+  <h3 style="margin-top:0;">Інформація про послугу та продавця</h3>
+
+  <p><strong>Що ви отримуєте:</strong><br>
+  Книга “30-денний набір «Пелюстки»” у форматі PDF-файлу, що включає добірку психологічних історій, афірмацій, запитань і мікропрактик для емоційної підтримки.</p>
+
+  <p><strong>Формат:</strong> PDF (цифровий продукт)</p>
+
+  <p><strong>Ціна:</strong> 300 грн  
+  <br><strong>Призначення платежу:</strong> Оплата за інформаційні послуги</p>
+
+  <p><strong>Як ви отримаєте матеріали:</strong><br>
+  Після підтвердження оплати покупець отримає доступ до матеріалів через email або посилання на Google Drive протягом 24 годин.  
+  При купівлі через Telegram-бот — посилання надсилається автоматично після підтвердження.</p>
+
+  <p><strong>Умови повернення:</strong><br>
+  Оскільки послуга є цифровим продуктом, який вважається наданим з моменту передачі доступу до PDF-файлу, повернення коштів не передбачене.  
+  У разі технічних проблем із отриманням — зверніться за контактами нижче.</p>
+
+  <p><strong>Контакти для підтримки:</strong><br>
+  Телефон: +38 (097) 947-74-31<br>
+  Email: <a href="mailto:petalsdigitalcontact@gmail.com">petalsdigitalcontact@gmail.com</a></p>
+
+  <hr style="border:none; border-top:1px solid rgba(0,0,0,0.08); margin:20px 0;">
+
+  <p><strong>Інформація про продавця:</strong><br>
+  Найменування отримувача оплати: ФОП Явтушенко Юлія Валеріївна<br>
+  Адреса для листування: вул. Мудрака 25, м. Київ, Україна</p>
+
+  <p><strong>Платіжні реквізити:</strong><br>
+  Отримувач: ФОП Явтушенко Юлія Валеріївна<br>
+  IBAN: UA343220010000026001360017953<br>
+  ІПН/ЄДРПОУ: 2989712940<br>
+  Банк: АТ “УНІВЕРСАЛ БАНК”<br>
+  МФО: 322001<br>
+  ЄДРПОУ Банку: 21133352
+  </p>
+</section>
 
     <footer>
       © Algisa Bloom · petals.digital
